--- a/favouritesPage/favPage.css
+++ b/favouritesPage/favPage.css
@@ -2,3 +2,11 @@
     padding: 0;
     margin: 0;
 }
+
+.js-favourites-body{
+    display: flex;
+    margin-top: 120px;
+    width: 100%;
+    height: 100%;
+    transition: 0.2s ease-in-out;
+}
