--- a/favouritesPage/favPage.css
+++ b/favouritesPage/favPage.css
@@ -10,3 +10,22 @@
     height: 100%;
     transition: 0.2s ease-in-out;
 }
+
+.no-fav-div{
+    height: 100vh;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+}
+
+.no-fav-div img{
+    width: 300px;
+}
+
+.no-fav{
+    width: 100vw;
+    align-self: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
