--- a/product_pages/productSinglePage.css
+++ b/product_pages/productSinglePage.css
@@ -14,6 +14,23 @@ body{
     min-height: calc(100vh - 140px);
 }
 
+/* Mobile Menu Toggle */
+.mobile-menu-toggle{
+    display: none;
+    flex-direction: column;
+    gap: 5px;
+    cursor: pointer;
+    padding: 5px;
+}
+
+.mobile-menu-toggle span{
+    width: 25px;
+    height: 3px;
+    background-color: #ee0652;
+    transition: all 0.3s;
+    border-radius: 2px;
+}
+
 /* Product Detail Section */
 .product-detail-container{
     max-width: 1400px;
@@ -434,6 +451,9 @@ body{
     .section-title{
         font-size: 24px;
     }
+    .mobile-menu-toggle{
+        display: flex;
+    }
 }
 
 @media (max-width: 480px) {
@@ -638,5 +658,8 @@ body{
     
     .related-product-img{
         height: 240px;
+    }
+    .nav-components > a:first-child{
+        display: none;
     }
 }
